--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -17,7 +17,7 @@
 
     <ul class="menu">
       <li><a href="/desafio-novembro/src/Home/index.html">Home</a></li>
-      <li><a href="#">Carrinho</a></li>
+      <li><a id="carrinhoBtn2">Carrinho</a></li>
       <li><a href="/desafio-novembro/src/Produtos/Produtos.html">Produtos</a></li>
     </ul>
 
@@ -36,29 +36,30 @@
       <h3>Por que escolher nossa loja?</h3>
       
       <ul class="lista">
-        <li class="lili"><strong>Qualidade Superior::</strong> Todos os nossos produtos são escolhidos com cuidado para garantir a máxima qualidade.</li>
+        <li class="lili"><strong>Qualidade Superior:</strong> Todos os nossos produtos são escolhidos com cuidado para garantir a máxima qualidade.</li>
         <li class="lili"><strong>Preços Justos:</strong> Oferecemos preços competitivos para garantir que você obtenha o melhor valor.</li>
         <li class="lili"><strong>Atendimento ao Cliente:</strong> Estamos aqui para ajudar você em cada passo do caminho, garantindo uma experiência de compra sem complicações.</li>
       </ul>
 
       <h3>Explore nossa loja agora e encontre os produtos perfeitos para você!</h3>
+      <a style="color: black;" href="/desafio-novembro/src/Produtos/Produtos.html"><button>Conferir</button></a>
     </section>
 
   </main>
 
   <footer>
     <div class="div-footer">
-      <div class="footer-section about">
+      <div class="footer-section about" id="Sobre">
             <h3>Sobre Nós</h3>
             <p>Somos uma loja dedicada a trazer produtos de alta qualidade aos nossos clientes. Nossa missão é oferecer uma experiência de compra excepcional.</p>
         </div>
       <div class="container-footer">
-        <div class="footer-section links">
+        <div class="footer-section links" id="links">
             <h3>Links Rápidos</h3>
             <ul style="margin: 30px;">
-                <li style="margin-bottom: 10px;"><a href="#">Home</a></li>
-                <li style="margin-bottom: 10px;"><a href="#">Produtos</a></li>
-                <li style="margin-bottom: 10px;"><a href="#">Sobre</a></li>
+                <li style="margin-bottom: 10px;"><a href="/desafio-novembro/src/Home/index.html">Home</a></li>
+                <li style="margin-bottom: 10px;"><a href="/desafio-novembro/src/Produtos/Produtos.html">Produtos</a></li>
+                <li style="margin-bottom: 10px;"><a href="#Sobre">Sobre</a></li>
                 <li style="margin-bottom: 10px;"><a href="#">Contato</a></li>
                 <li style="margin-bottom: 10px;"><a href="#">FAQ</a></li>
             </ul>
